--- a/frontend/src/Designs/Css/Footer.css
+++ b/frontend/src/Designs/Css/Footer.css
@@ -1,9 +1,9 @@
 .kirbcloud-image {
-  margin-top: -110px;
+  margin-top: -84px;
   background-image: url("../Images/Kirbcloud.png");
   background-repeat: repeat-x;
   background-size: 200px auto;
-  height: 70px;
+  height: 50px;
   animation: scroll 10s linear infinite;
 }
 
@@ -20,8 +20,7 @@
   padding: 40px 0;
   background-color: white;
   color: #ff2b91;
-  width: 100vw;
-  position: fixed; /* Keep footer fixed at the bottom */
+  width: 100%;
   left: 0;
   bottom: 0;
   align-items: center;
